fix: horizontal scrolling as page too wide

--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -1,7 +1,6 @@
 .home {
     background-image: url("../assets/images/Background.png");
     height: 100vh;
-    width: 100vw;
     min-height: 100%;
     text-align: center;
     background-size: cover;
@@ -12,7 +11,6 @@
 }
 
 .background-video {
-    width: 100vw;
     min-height: 100vh;
     position: fixed;
     top: -10vh;
